fix: layout issue with shifted elements

--- a/src/main/webapp/static/css/live-match.css
+++ b/src/main/webapp/static/css/live-match.css
@@ -17,13 +17,15 @@ body {
 }
 
 .scoreboard {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     margin: 20px;
     gap: 16px;
     padding: 20px;
-    max-width: 800px;
+    width:800px;
+    height: 500px;
     font-family: sans-serif;
-    flex-grow: 1;
-    max-height: 500px;
     background: rgba(229, 241, 241, 0.8);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
